# cortex

./: .gitignore  DECISIONS.md  PLAN.md  README.md  conftest.py  pyproject.toml
bench/: agent_eval.py  checkout.py  mine.py  repos.toml  retrieval_eval.py
bench/dataset/: EXCLUDED.md  pandas.jsonl  vite.jsonl
src/cortex/: __init__.py  chunker.py  cli.py  config.py  discovery.py  embedder.py  graph.py  indexer.py  mcp_server.py  retriever.py  store.py  watcher.py
tests/: test_chunker.py  test_cli.py  test_indexer.py  test_mcp_server.py  test_mine.py  test_retriever.py  test_store.py
tests/fixtures/: sample.py  sample.ts
