[project]
name = "cortex"
version = "0.1.0"
description = "Local-only hybrid semantic code index and benchmark harness for Claude Code, exposed as an MCP server."
readme = "README.md"
requires-python = ">=3.12"
# NOTE: dependencies are added per-phase as modules start using them (see DECISIONS.md).
# Phase 0 needs only the CLI framework (typer), the benchmark miner HTTP client (httpx),
# and gitignore matching (pathspec). Heavy ML/vector/MCP deps land in their phases.
dependencies = [
    "typer>=0.15",
    "httpx>=0.28",
    "pathspec>=0.12",
    "tree-sitter>=0.26.0",
    "tree-sitter-language-pack>=1.12.2",
    "sentence-transformers>=5.6.0",
    "lancedb>=0.34.0",
    "einops>=0.8.2",
    "transformers>=4.40,<5",
]

[project.scripts]
cortex = "cortex.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Fixtures are deliberately-shaped test inputs (unused imports, odd layout); never autofix them.
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
